WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
53306
uniformN*v should generate INVALID_VALUE of the array size is not a multiple of N
https://bugs.webkit.org/show_bug.cgi?id=53306
Summary
uniformN*v should generate INVALID_VALUE of the array size is not a multiple ...
Zhenyao Mo
Reported
2011-01-28 09:03:07 PST
According to the updated webgl spec
Attachments
Patch
(13.20 KB, patch)
2011-01-28 10:18 PST
,
Zhenyao Mo
kbr
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Zhenyao Mo
Comment 1
2011-01-28 10:18:31 PST
Created
attachment 80462
[details]
Patch
Zhenyao Mo
Comment 2
2011-01-28 10:19:40 PST
I already updated the khronos side tests and synced here. I just realized the spec hasn't been updated yet. Hope doing the fix before the spec update will be fine.
Kenneth Russell
Comment 3
2011-01-28 11:22:10 PST
Comment on
attachment 80462
[details]
Patch Looks good.
Zhenyao Mo
Comment 4
2011-01-28 14:20:54 PST
Committed
r76988
: <
http://trac.webkit.org/changeset/76988
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug